book-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: book-ingress
spec:
  rules:
    - host: book.local
      http:
        paths:
          - path: /books
            pathType: Prefix
            backend:
              service:
                name: book-service
                port:
                  number: 3000
