book-service/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: book-virtualservice
spec:
  hosts:
    - "book.local"
  gateways:
    - book-gateway
  http:
    - match:
        - uri:
            prefix: /books
      route:
        - destination:
            host: book-service
            port:
              number: 3000
    - match:
        - uri:
            prefix: /loans
      route:
        - destination:
            host: loan-service
            port:
              number: 3001
